chore: remove double quotes for multi-line texts

--- a/data/translations/en.yaml
+++ b/data/translations/en.yaml
@@ -30,7 +30,9 @@ CLOUD_KEYBOARD_TEXT_ID: "☁ Cloud"
 REPORT_TO_KEYBOARD_TEXT_ID: "📫 Report to Representatives"
 
 # /start command
-START_TEXT_ID: "Welcome! This bot is developed by Computer Science's students to help fellow DMI's students!\nUse /help or press the ❔ Help button to know what this bot can do"
+START_TEXT_ID: |-
+  Welcome! This bot is developed by Computer Science's students to help fellow DMI's students!
+  Use /help or press the ❔ Help button to know what this bot can do
 
 # /help command
 HELP_HEADER_TEXT_ID: "@DMI_Bot can help you with (following commands):"
@@ -41,33 +43,33 @@ HELP_ERSU_ORARI_KEYBOARD_TEXT_ID: "🍽 ERSU's contactsand working hours"
 HELP_APPUNTI_CLOUD_KEYBOARD_TEXT_ID: "☁ Notes & Cloud"
 HELP_PROGETTI_RICONOSCIMENTI_KEYBOARD_TEXT_ID: "🏅 Projects e Credits"
 HELP_ALL_COMMANDS_KEYBOARD_TEXT_ID: "All commands"
-HELP_ALL_COMMANDS_TOOLTIP_ID: "
-*@DMI_Bot can help you with (following commands):*\n
-📖 /esami - _look for exams with applicable filters_\n
-📘 /lezioni - _look for lessons with applicable filters_\n
-🗓 /aulario - _shows lecture room and a map of the classrooms_\n
-👔 /prof <nome> - _es. /prof Barbanera_\n
-👥 /rappresentanti - _list of representatives_\n
-📚 /biblioteca - _DMI's library working hours_\n
-<cusicon> /cus - _location and contacts_\n
-☁ /cloud - _ access to cloud shared folders_\n
-📣 /report - _submit a report to representatives_\n
-📂 /drive - _access to the drive_\n
-🤝 /drive\_contribute - _request upload permission to add new material on the drive_\n
-📂 /git o /gitlab - _access to gitlab_\n
-🧑‍💻 /contributors - _show the developers that contributed to the bot development_\n
-🧾 /regolamentodidattico - _give a pdf file of the desisered year's educational regulations_\n
-\n
-*Receptionist's contacts and working hours:*\n
-✍ /sdidattica - _edcational receptionist_\n
-📓 /studenti - _student receptionist_\n
-/cea - _information for Centro per i sistemi di Elaborazione e Applicazioni scientifiche e didattiche_\n
-\n
-*ERSU's contactsand working hours:*\n
-🗃 /ersu - _location of the main ersu office_\n
-🗃 /ufficioersu - _(ersu office for student cards)_\n
-🗃 /urp - _students' URP_\n
-"
+HELP_ALL_COMMANDS_TOOLTIP_ID: |-
+  *@DMI_Bot can help you with (following commands):*
+  📖 /esami - _look for exams with applicable filters_
+  📘 /lezioni - _look for lessons with applicable filters_
+  🗓 /aulario - _shows lecture room and a map of the classrooms_
+  👔 /prof <nome> - _es. /prof Barbanera_
+  👥 /rappresentanti - _list of representatives_
+  📚 /biblioteca - _DMI's library working hours_
+  <cusicon> /cus - _location and contacts_
+  ☁ /cloud - _ access to cloud shared folders_
+  📣 /report - _submit a report to representatives_
+  📂 /drive - _access to the drive_
+  🤝 /drive\_contribute - _request upload permission to add new material on the drive_
+  📂 /git o /gitlab - _access to gitlab_
+  🧑‍💻 /contributors - _show the developers that contributed to the bot development_
+  🧾 /regolamentodidattico - _give a pdf file of the desisered year's educational regulations_
+  
+  *Receptionist's contacts and working hours:*
+  ✍ /sdidattica - _edcational receptionist_
+  📓 /studenti - _student receptionist_
+  /cea - _information for Centro per i sistemi di Elaborazione e Applicazioni scientifiche e didattiche_
+  
+  *ERSU's contactsand working hours:*
+  🗃 /ersu - _location of the main ersu office_
+  🗃 /ufficioersu - _(ersu office for student cards)_
+  🗃 /urp - _students' URP_
+
 
 # /help-CDL command
 HELP_CDL_EXAMS_TEXT_ID: "📖 Exams (link)"
@@ -76,7 +78,9 @@ HELP_CDL_PROF_INFO_TEXT_ID: "👨‍🏫 Professors Info"
 HELP_CDL_REPRS_TEXT_ID: "👥 Representatives"
 HELP_CDL_LIBRARY_TEXT_ID: "📚 Library"
 HELP_CDL_GROUPS_TEXT_ID: "📊 Groups"
-HELP_CDL_PROF_TOOLTIP_ID: "To get information about professors you can use the following command:\n/prof Stanco"
+HELP_CDL_PROF_TOOLTIP_ID: |-
+  To get information about professors you can use the following command:
+  /prof Stanco"
 
 # /help-Reprs command
 REPRS_HEADER_TEXT_ID: "With which representatives you want to talk?"
@@ -113,19 +117,31 @@ AULARIO_LESSON_AT_TIME_TEXT_ID: "At:"
 
 # /drive command
 DRIVE_NO_USERNAME_WARNING_TEXT_ID: "No username entered"
-DRIVE_USE_TEXT_TEXT_ID: "USAGE: /drive_contribute [e-mail] [reason]\n\nEXAMPLE: /drive_contribute mario.rossi@gmail.com I want to share my Fondamenti di Informatica notes"
-DRIVE_CONFIRM_ACCESS_TEXT_ID: "You obtained the write permission for the Drive's folder! \n\nYou will soon receive a confirmation email and then you will be able to upload your notes to the Drive with the following link https://cutt.ly/unict-dmi-drive"
+DRIVE_USE_TEXT_TEXT_ID: |-
+  USAGE: /drive_contribute [e-mail] [reason]
+  EXAMPLE:
+    /drive_contribute mario.rossi@gmail.com I want to share my Fondamenti di Informatica notes
+DRIVE_CONFIRM_ACCESS_TEXT_ID: |-
+  You obtained the write permission for the Drive's folder!
+  You will soon receive a confirmation email and then you will be able to upload your notes to the Drive with the following link https://cutt.ly/unict-dmi-drive
 DRIVE_VALIDATION_ERROR_TEXT_ID: "An error occurred while validating your email, try again in few minutes or check if you already obtained the write permission with the following link https://cutt.ly/unict-dmi-drive"
 DRIVE_HEADER_TEXT_ID: "Notes & Resources:"
 DRIVE_ERROR_DEVS_TEXT_ID: "We re sorry but an error occurred. Contact the developers with /help"
-DRIVE_ERROR_GFILE_TEXT_ID: "Unable to download the file because it is a google document...\n Go here: %capybara%"
-DRIVE_ERROR_TOO_BIG_TEXT_ID: "Ffile is too big for a direct download...\n Download from here: %capybara%"
+DRIVE_ERROR_GFILE_TEXT_ID: |-
+  Unable to download the file because it is a google document...
+  Go here: %capybara%
+DRIVE_ERROR_TOO_BIG_TEXT_ID: |-
+  File is too big for a direct download...
+  Download from here: %capybara%
 
 # /report command
 REPORT_ON_GROUP_WARNING_TEXT_ID: "The operation %capybara% is not allowed inside groups."
 REPORT_NO_USERNAME_WARNING_TEXT_ID: "The operation %capybara% is not allowed for users without username."
 REPORT_WARNING_TEXT_ID: "Error. Enter your report after the /report (Example: /report Capyrabas are raining down from the sky.)"
-REPORT_RESPONSE_TEXT_ID: "Report Summary:\n %capybara% \n Thanks for your report, a representative will get to you as soon as possible."
+REPORT_RESPONSE_TEXT_ID: |-
+  Report Summary:
+  %capybara%
+  Thanks for your report, a representative will get to you as soon as possible.
 
 # /regolamentodidattico command
 REG_CDL_GRAD_SELECT_TEXT_ID: "Choose one of the degree programs:"
@@ -144,7 +160,11 @@ CLASSES_SELECT_DAY2_TEXT_ID: "Tuesday"
 CLASSES_SELECT_DAY3_TEXT_ID: "Wednesday"
 CLASSES_SELECT_DAY4_TEXT_ID: "Thursday"
 CLASSES_SELECT_DAY5_TEXT_ID: "Friday"
-CLASSES_USAGE_TEXT_ID: "Enter the name of the subject in the format:\n nome: subject_name\n Example:\n nome: SisTeMi oPeRaTIvI"
+CLASSES_USAGE_TEXT_ID: |-
+  Enter the name of the subject in the format:
+    nome: subject_name
+  Example:
+    nome: SisTeMi oPeRaTIvI
 
 # /esami command
 EXAMS_SELECT_SESSION_TEXT_ID: "Select the session you are interested in"
@@ -152,4 +172,8 @@ EXAMS_SESSION_1_TEXT_ID: "First"
 EXAMS_SESSION_2_TEXT_ID: "Second"
 EXAMS_SESSION_3_TEXT_ID: "Third"
 EXAMS_SESSION_4_TEXT_ID: "Extraordinary"
-EXAMS_USAGE_TEXT_ID: "Enter the name of the subject in the format:\n ins: subject_name\n Example:\n ins: SisTeMi oPeRaTIvI"
+EXAMS_USAGE_TEXT_ID: |-
+  Enter the name of the subject in the format:
+    ins: subject_name
+  Example:
+    ins: SisTeMi oPeRaTIvI
