--- a/data/translations/it.yaml
+++ b/data/translations/it.yaml
@@ -30,7 +30,9 @@ CLOUD_KEYBOARD_TEXT_ID: "☁ Cloud"
 REPORT_TO_KEYBOARD_TEXT_ID: "📫 Segnalazione Rappresentanti"
 
 # /start command
-START_TEXT_ID: "Benvenuto! Questo bot è stato realizzato dagli studenti del Corso di Laurea in Informatica al fine di suppotare gli studenti del DMI!\nPer scoprire cosa puoi fare usa /help o premi il pulsante ❔ Aiuto"
+START_TEXT_ID: |-
+  Benvenuto! Questo bot è stato realizzato dagli studenti del Corso di Laurea in Informatica al fine di suppotare gli studenti del DMI!
+  Per scoprire cosa puoi fare usa /help o premi il pulsante ❔ Aiuto
 
 # /help command
 HELP_HEADER_TEXT_ID: "@DMI_Bot risponde ai seguenti comandi:"
@@ -41,33 +43,32 @@ HELP_ERSU_ORARI_KEYBOARD_TEXT_ID: "🍽 ERSU orari e contatti"
 HELP_APPUNTI_CLOUD_KEYBOARD_TEXT_ID: "☁ Appunti & Cloud"
 HELP_PROGETTI_RICONOSCIMENTI_KEYBOARD_TEXT_ID: "🏅 Progetti e Riconoscimenti"
 HELP_ALL_COMMANDS_KEYBOARD_TEXT_ID: "Tutti i comandi"
-HELP_ALL_COMMANDS_TOOLTIP_ID: "
-*@DMI_Bot risponde ai seguenti comandi:*\n
-📖 /esami - _effettua una ricerca delle informazioni degli esami secondo i parametri immessi_\n
-📘 /lezioni - _effettua una ricerca delle lezioni secondo i parametri immessi_\n
-🗓 /aulario - _visualizza aulario e mappa delle aule_\n
-👔 /prof <nome> - _es. /prof Barbanera_\n
-👥 /rappresentanti - _elenco dei rappresentanti_\n
-📚 /biblioteca - _orario biblioteca DMI_\n
-<cusicon> /cus - _sede e contatti_\n
-☁ /cloud - _linka le cartelle condivise su cloud_\n
-📣 /report - _permette di inviare una segnalazione ai rappresentanti_\n
-📂 /drive - _accedi a drive_\n
-🤝 /drive\_contribute - _ottieni i permessi per caricare materiale sulla cartella drive_\n
-📂 /git o /gitlab - _accedi a gitlab_\n
-🧑‍💻 /contributors - _mostra gli sviluppatori che hanno contribuito allo sviluppo del bot_\n
-🧾 /regolamentodidattico - _invia il pdf del regolamento didattico per l'anno desiderato_\n
-\n
-*Segreteria orari e contatti:*\n
-✍ /sdidattica - _segreteria didattica_\n
-📓 /studenti - _segreteria studenti_\n
-/cea - _informazioni Centro per i sistemi di Elaborazione e Applicazioni scientifiche e didattiche_\n
-\n
-*ERSU orari e contatti:*\n
-🗃 /ersu - _informazioni sede centrale ersu_\n
-🗃 /ufficioersu - _(ufficio tesserini)_\n
-🗃 /urp - _URP studenti_\n
-"
+HELP_ALL_COMMANDS_TOOLTIP_ID: |-
+  *@DMI_Bot risponde ai seguenti comandi:*
+  📖 /esami - _effettua una ricerca delle informazioni degli esami secondo i parametri immessi_
+  📘 /lezioni - _effettua una ricerca delle lezioni secondo i parametri immessi_
+  🗓 /aulario - _visualizza aulario e mappa delle aule_
+  👔 /prof <nome> - _es. /prof Barbanera_
+  👥 /rappresentanti - _elenco dei rappresentanti_
+  📚 /biblioteca - _orario biblioteca DMI_
+  <cusicon> /cus - _sede e contatti_
+  ☁ /cloud - _linka le cartelle condivise su cloud_
+  📣 /report - _permette di inviare una segnalazione ai rappresentanti_
+  📂 /drive - _accedi a drive_
+  🤝 /drive\_contribute - _ottieni i permessi per caricare materiale sulla cartella drive_
+  📂 /git o /gitlab - _accedi a gitlab_
+  🧑‍💻 /contributors - _mostra gli sviluppatori che hanno contribuito allo sviluppo del bot_
+  🧾 /regolamentodidattico - _invia il pdf del regolamento didattico per l'anno desiderato_
+  
+  *Segreteria orari e contatti:*
+  ✍ /sdidattica - _segreteria didattica_
+  📓 /studenti - _segreteria studenti_
+  /cea - _informazioni Centro per i sistemi di Elaborazione e Applicazioni scientifiche e didattiche_
+  
+  *ERSU orari e contatti:*
+  🗃 /ersu - _informazioni sede centrale ersu_
+  🗃 /ufficioersu - _(ufficio tesserini)_
+  🗃 /urp - _URP studenti_
 
 # /help-CDL command
 HELP_CDL_EXAMS_TEXT_ID: "📖 Esami (link)"
@@ -76,7 +77,9 @@ HELP_CDL_PROF_INFO_TEXT_ID: "👨‍🏫 Info Professori"
 HELP_CDL_REPRS_TEXT_ID: "👥 Rappresentanti"
 HELP_CDL_LIBRARY_TEXT_ID: "📚 Biblioteca"
 HELP_CDL_GROUPS_TEXT_ID: "📊 Gruppi"
-HELP_CDL_PROF_TOOLTIP_ID: "Per avere info sui professori puoi utilizzare il seguente comando:\n/prof Stanco"
+HELP_CDL_PROF_TOOLTIP_ID: |-
+  Per avere info sui professori puoi utilizzare il seguente comando:
+  /prof Stanco"
 
 # /help-Reprs command
 REPRS_HEADER_TEXT_ID: "Quali rappresentanti vuoi contattare?"
@@ -113,19 +116,31 @@ AULARIO_LESSON_AT_TIME_TEXT_ID: "Ore:"
 
 # /drive command
 DRIVE_NO_USERNAME_WARNING_TEXT_ID: "Nessuno username"
-DRIVE_USE_TEXT_TEXT_ID: "USO: /drive_contribute [e-mail] [motivazione]\n\nESEMPIO: /drive_contribute mario.rossi@gmail.com Vorrei caricare i miei appunti di Fondamenti di Informatica"
-DRIVE_CONFIRM_ACCESS_TEXT_ID: "Hai ottenuto l'accesso in scrittura alla cartella Drive! \n\nPresto ti arriverà un'email di conferma per gli accessi in scrittura e potrai aggiungere appunti nella cartella mediante questo link https://cutt.ly/unict-dmi-drive"
+DRIVE_USE_TEXT_TEXT_ID: |-
+  USO: /drive_contribute [e-mail] [motivazione]
+  ESEMPIO: 
+    /drive_contribute mario.rossi@gmail.com Vorrei caricare i miei appunti di Fondamenti di Informatica
+DRIVE_CONFIRM_ACCESS_TEXT_ID: |-
+  Hai ottenuto l'accesso in scrittura alla cartella Drive!
+  Presto ti arriverà un'email di conferma per gli accessi in scrittura e potrai aggiungere appunti nella cartella mediante questo link https://cutt.ly/unict-dmi-drive
 DRIVE_VALIDATION_ERROR_TEXT_ID: "Si é verificato un errore durante la validazione dell'email, riprova più tardi o verifica se hai già gli accessi in scrittura alla cartella mediante questo link https://cutt.ly/unict-dmi-drive"
 DRIVE_HEADER_TEXT_ID: "Appunti & Risorse:"
 DRIVE_ERROR_DEVS_TEXT_ID: "Si è verificato un errore, ci scusiamo per il disagio. Contatta i devs. /help"
-DRIVE_ERROR_GFILE_TEXT_ID: "Impossibile scaricare questo file poichè esso è un google document...\n Andare su seguente link: %capybara%"
-DRIVE_ERROR_TOO_BIG_TEXT_ID: "File troppo grande per il download diretto...\n Scarica dal seguente link: %capybara%"
+DRIVE_ERROR_GFILE_TEXT_ID: |-
+  Impossibile scaricare questo file poichè esso è un google document...
+  Andare su seguente link: %capybara%
+DRIVE_ERROR_TOO_BIG_TEXT_ID: |-
+  File troppo grande per il download diretto...
+  Scarica dal seguente link: %capybara%
 
 # /report command
 REPORT_ON_GROUP_WARNING_TEXT_ID: "La funzione %capybara% non è ammessa nei gruppi."
 REPORT_NO_USERNAME_WARNING_TEXT_ID: "La funzione %capybara% non è ammessa se non si dispone di un username."
 REPORT_WARNING_TEXT_ID: "Errore. Inserisci la tua segnalazione dopo /report (Ad esempio /report Piovono capibara dal cielo!.)"
-REPORT_RESPONSE_TEXT_ID: "Resoconto segnalazione:\n %capybara% \n Grazie per la segnalazione, un rappresentante ti contatterà nel minor tempo possibile."
+REPORT_RESPONSE_TEXT_ID: |-
+  Resoconto segnalazione:
+  %capybara%
+  Grazie per la segnalazione, un rappresentante ti contatterà nel minor tempo possibile.
 
 # /regolamentodidattico command
 REG_CDL_GRAD_SELECT_TEXT_ID: "Scegliere uno dei corsi di laurea:"
@@ -144,7 +159,11 @@ CLASSES_SELECT_DAY2_TEXT_ID: "Martedì"
 CLASSES_SELECT_DAY3_TEXT_ID: "Mercoledì"
 CLASSES_SELECT_DAY4_TEXT_ID: "Giovedì"
 CLASSES_SELECT_DAY5_TEXT_ID: "Vederdì"
-CLASSES_USAGE_TEXT_ID: "Inserire il nome della materia nel formato:\n nome: nome insegnamento\n Esempio:\n nome: SisTeMi oPeRaTIvI"
+CLASSES_USAGE_TEXT_ID: |-
+  Inserire il nome della materia nel formato:
+    nome: nome insegnamento
+  Esempio:
+    nome: SisTeMi oPeRaTIvI
 
 # /exams command
 EXAMS_SELECT_SESSION_TEXT_ID: "Seleziona la sessione che ti interessa"
@@ -152,4 +171,8 @@ EXAMS_SESSION_1_TEXT_ID: "Prima"
 EXAMS_SESSION_2_TEXT_ID: "Seconda"
 EXAMS_SESSION_3_TEXT_ID: "Terza"
 EXAMS_SESSION_4_TEXT_ID: "Straordinaria"
-EXAMS_USAGE_TEXT_ID: "Inserire il nome della materia nel formato:\n ins: nome insegnamento\n Esempio:\n ins: SisTeMi oPeRaTIvI"
+EXAMS_USAGE_TEXT_ID: |-
+  Inserire il nome della materia nel formato:
+    ins: nome insegnamento
+  Esempio:
+    ins: SisTeMi oPeRaTIvI
