--- a/data/translations/en.yaml
+++ b/data/translations/en.yaml
@@ -63,13 +63,12 @@ HELP_ALL_COMMANDS_TOOLTIP_ID: |-
   *Receptionist's contacts and working hours:*
   ✍ /sdidattica - _edcational receptionist_
   📓 /studenti - _student receptionist_
-  /cea - _information for Centro per i sistemi di Elaborazione e Applicazioni scientifiche e didattiche_
+  /cea - _information for Center for Computing Systems and Scientific and Educational Applications_
   
   *ERSU's contactsand working hours:*
   🗃 /ersu - _location of the main ersu office_
   🗃 /ufficioersu - _(ersu office for student cards)_
   🗃 /urp - _students' URP_
-
 
 # /help-CDL command
 HELP_CDL_EXAMS_TEXT_ID: "📖 Exams (link)"
@@ -81,22 +80,159 @@ HELP_CDL_GROUPS_TEXT_ID: "📊 Groups"
 HELP_CDL_PROF_TOOLTIP_ID: |-
   To get information about professors you can use the following command:
   /prof Stanco
+HELP_CDL_EXAMS_LINK_TOOLTIP_ID: |-
+  *Exams' about page*
+  _Computer Science Bachelor (L-31):_ [link](%capybara%)
+  _Mathematics Bachelor (L-35):_ [link](%capybara%)
+  _Computer Science Master (LM-18):_ [link](%capybara%)
+  _Mathematics Master (LM-40):_ [link](%capybara%)
+HELP_CDL_CLASSES_LINK_TOOLTIP_ID: |-
+  *Classes' timetable page*
+  _Computer Science Bachelor (L-31):_ [link](%capybara%)
+  _Mathematics Bachelor (L-35):_ [link](%capybara%)
+  _Computer Science Master (LM-18):_ [link](%capybara%)
+  _Mathematics Master (LM-40):_ [link](%capybara%)
+HELP_CDL_LIBRARY_TOOLTIP_ID: |-
+  *Library working hours:*
+  
+  Reading room:
+  
+  %capybara%
+
+  Leasing Service:
+  
+  %capybara%
 
 # /help-Reprs command
 REPRS_HEADER_TEXT_ID: "With which representatives you want to talk?"
-REPRS_DMI_TEXT_ID: "DMI's Repr."
-REPRS_DMI_CS_TEXT_ID: "Computer Science Repr."
-REPRS_DMI_MATH_TEXT_ID: "Mathematics Repr."
+REPRS_DMI_TEXT_ID: "DMI's Reps"
+REPRS_DMI_CS_TEXT_ID: "Computer Science Reps"
+REPRS_DMI_MATH_TEXT_ID: "Mathematics Reps"
+REPRS_DMI_TOOLTIP_ID: "*DMI's Representatives*"
+REPRS_DMI_CS_TOOLTIP_ID: |-
+  *Computer Science Bachelor Program Representatives*
+  
+  %capybara%
+  
+  *Computer Science Master Program Representatives*
+  
+  %capybara%
+REPRS_DMI_MATH_TOOLTIP_ID: |-
+  *Mathematics Bachelor Program Representatives*
+  
+  %capybara%
+  
+  *Mathematics Master Program Representatives*
+  
+  %capybara%
 
 # /help-Segr command
-SEGR_DID_TEXT_ID: "Educational Sec."
-SEGR_STU_TEXT_ID: "Students Sec."
+SEGR_DID_TEXT_ID: "Educational Rec."
+SEGR_STU_TEXT_ID: "Students Rec."
 SEGR_CEA_TEXT_ID: "CEA"
+SEGR_DID_TOOLTIP_ID: |-
+  Headquarters at the Department of Mathematics and Computer Science (second floor near the Directorate)  
+
+  **Secretarial staff**
+  
+  %capybara%
+
+  **Didactic Secretariat**
+
+  %capybara%
+
+  **Additional DMI Contacts**
+
+  %capybara%
+SEGR_STU_TOOLTIP_ID: |-
+  *Student receptionist*
+  
+  Location:
+  
+  %capybara%
+  
+  Contacts:
+  
+  %capybara%
+
+  🕑 Winter working hours:
+  
+  %capybara%
+
+  Student Careers Office - Scientific Area
+
+  Mathematics Bachelor & Master Programs (L-LM)
+  
+  %capybara%
+
+  Master Program Bachelor Program (L)
+  
+  %capybara%
+  
+  Computer Science Master Program (LM)
+  
+  %capybara%
+SEGR_CEA_TOOLTIP_ID: |-
+  *Center for Computing Systems and Scientific and Educational Applications (CEA)*
+  
+  Contacts:
+  
+  %capybara%
+  
+  Location:
+  
+  %capybara%
+  
+  Website:
+  
+  %capybara%
 
 # /help-ERSU command
 ERSU_TEXT_ID: "ERSU"
 ERSU_OFFICE_TEXT_ID: "ERSU's Office"
 ERSU_URP_TEXT_ID: "URP"
+ERSU_TOOLTIP_ID: |-
+  *ERSU Catania - Headquarters*
+  
+  Location:
+  
+  %capybara%
+  
+  Contacts:
+  
+  %capybara%
+
+  🕑 Working hours:
+  
+  %capybara%
+ERSU_OFFICE_TOOLTIP_ID: |-
+  *ERSU Catania - Student ID Card Office*
+  
+  Location:
+  
+  %capybara%
+  
+  🕑 Working hours:
+  
+  %capybara%
+
+  Location:
+
+  %capybara%
+
+  🕑 Working hours:
+
+  %capybara%
+ERSU_URP_TOOLTIP_ID: |-
+  *URP Students*
+  
+  Location:
+  
+  %capybara%
+  
+  Contacts:
+  
+  %capybara%
 
 # /help-projct/credits command
 PRJ_OPIS_TEXT_ID: "Opis Manager"
